Added settings menu button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="group">Õppegrupid</string>
     <string name="teacher">Õpetajad</string>
     <string name="room">Ruumid</string>
+    <string name="action_settings">Sätted</string>
 </resources>
