Created navigation between different activites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="teacher">Õpetajad</string>
     <string name="room">Ruumid</string>
     <string name="action_settings">Sätted</string>
+    <string name="object">ÕPILASED</string>
 </resources>
