Added navigation - When you click on the button called "Õppegrupid" in Settings then the user will be navigated to the next screen. Added back button to Fragment_setting_list page (currently not working)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="object">ÕPILASED</string>
     <string name="Close">Close</string>
     <string name="Open">Open</string>
+    <string name="choose">Vali Õppegrupp</string>
+    <string name="back">Tagasi</string>
 
 </resources>
