Fixed small problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="group">Õppegrupid</string>
     <string name="teacher">Õpetajad</string>
     <string name="room">Ruumid</string>
+    <string name="action_settings">Sätted</string>
 
     <string name="object">ÕPILASED</string>
     <string name="Close">Close</string>
