--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Tartu KHK</string>
     <string name="timetable">Tunniplaan</string>
-    <string name="student">Õpilased</string>
     <string name="group">Õppegrupid</string>
     <string name="teacher">Õpetajad</string>
     <string name="room">Ruumid</string>
@@ -13,7 +12,7 @@
     <string name="choose">Vali Õppegrupp</string>
     <string name="choose2">Vali Õpetaja</string>
     <string name="back">Tagasi</string>
-    <string name="submit">Saada</string>
+    <string name="submit">vali</string>
     <string name="back2">Tagasi</string>
     <string name="name">Test</string>
 
